@@ -185,7 +185,7 @@ sub als_add_named_cfg_data {
 	return $rs if ($rs != 0);
 
 	#
-	# Let's construct nedded tags and entries;
+	# Let's construct needed tags and entries;
 	#
 	my %tag_hash = (
 		'{DMN_NAME}' => $als_name,
@@ -206,7 +206,7 @@ sub als_add_named_cfg_data {
 	return $rs if ($rs != 0);
 
 	#
-	# Let's get Sytem and Workind config files;
+	# Let's get System and Working config files;
 	#
 	my ($sys, $working) = ('', '');
 	($rs, $sys) = get_file($sys_cfg);
@@ -219,7 +219,7 @@ sub als_add_named_cfg_data {
 	return $rs if ($rs != 0);
 
 	#
-	# Is the new domain entry exists ?
+	# Does the new domain entry exists ?
 	#
 	($rs, $rdata) = get_tag($entry_b_val, $entry_e_val, $working);
 	if ($rs == 0) {
@@ -231,7 +231,7 @@ sub als_add_named_cfg_data {
 	return $rs if ($rs != 0);
 
 	#
-	# Let's contruct the replacement and do it;
+	# Let's construct the replacement and do it;
 	#
 	my $entry_repl = "$entry_b_val$entry_val$entry_e_val\n$entry_b$entry_e";
 	($rs, $working) = repl_tag($entry_b, $entry_e, $working, $entry_repl, "als_add_named_cfg_data");
@@ -251,7 +251,7 @@ sub als_add_named_cfg_data {
 
 	#
 	# Here we'll replace data in production config file with data in working
-	# confing file. A little workaround will be done. If working copy data does not exist
+	# config file. A little workaround will be done. If working copy data does not exist
 	# in production config then we will add it;
 	#
 	($rs, $rdata) = get_tag($dta_b, $dta_e, $sys);
@@ -321,7 +321,7 @@ sub als_del_named_cfg_data {
 	return $rs if ($rs != 0);
 
 	#
-	# Let's construct nedded tags and entries;
+	# Let's construct needed tags and entries;
 	#
 	my %tag_hash = (
 		'{DMN_NAME}' => $als_name,
@@ -342,7 +342,7 @@ sub als_del_named_cfg_data {
 	return $rs if ($rs != 0);
 
 	#
-	# Let's get Sytem and Workind config files;
+	# Let's get Sytem and Working config files;
 	#
 	my ($sys, $working) = ('', '');
 	($rs, $sys) = get_file($sys_cfg);
@@ -355,7 +355,7 @@ sub als_del_named_cfg_data {
 	return $rs if ($rs != 0);
 
 	#
-	# Is the new domain entry exists ?
+	# Does the new domain entry exists ?
 	#
 	($rs, $rdata) = get_tag($entry_b_val, $entry_e_val, $working);
 	if ($rs == 0) {
@@ -367,7 +367,7 @@ sub als_del_named_cfg_data {
 	return $rs if ($rs != 0);
 
 	#
-	# Let's contruct the replacement and do it;
+	# Let's construct the replacement and do it;
 	#
 	#
 	#my $entry_repl = "$entry_b_val$entry_val$entry_e_val\n$entry_b$entry_e";
@@ -1056,7 +1056,7 @@ sub als_add_httpd_cfg_data {
 		return $rs if ($rs != 0);
 	} elsif ($rs == -5) { # No, We haven't ! We'll add it;
 		$sys .= $working;
-	} else { # Some error that should not be happend ! Exitting...
+	} else { # Some error that should not be happend ! Exiting...
 		return $rs;
 	}
 
@@ -1264,7 +1264,7 @@ sub als_del_httpd_cfg_data {
 		return $rs if ($rs != 0);
 	} elsif ($rs == -5) { # No, We haven't ! We'll add it;
 		$sys .= $working;
-	} else { # Some error that should not be happend ! Exitting...
+	} else { # Some error that should not be happend ! Exiting...
 		return $rs;
 	}
 	#
