@@ -2,6 +2,8 @@ ispCP ω 1.0.0 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 2008-06-02 Benedikt Heintel
+	- ENGINE:
+		* Fixed #1329: some typos in the engine perl files
 	- GUI:
 		* Fixed #1327: No switch back as admin when logged as reseller
 		* Fixed #1328: updated all language files to fit the change in the translation strings where "can not" was replaced with "cannot"
